KUBERNETES YAML FILES/11-NETWORK/INGRESS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: example-ingress
spec:
 rules:
 - host: nginx-hello.info
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: nginx
           port:
            number: 80


# https://spacelift.io/blog/kubernetes-ingress   ----> for practical guide
